--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 
     <nav class="nav text-left">
       <a class="nav-link active" [routerLink]="['/events']" routerLinkActive="router-link-active"  href="#">Eventos</a>
-      <a class="nav-link" href="#">Añadir eventos</a>
+      <a class="nav-link" href="#" [routerLink]="['/add-event']" routerLinkActive="router-link-active" >Añadir eventos</a>
       <a class="nav-link disabled" href="#">Encuestas</a>
     </nav>
 
