--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <router-outlet></router-outlet>
+      <ddr-content></ddr-content>
     </div>
   </div>
 
