--- a/src/app/components/content/add-event/add-event.component.html
+++ b/src/app/components/content/add-event/add-event.component.html
@@ -47,6 +47,7 @@
                 <option value="blog">Post</option>
                 <option value="video">Video</option>
                 <option value="streaming">Directo</option>
+                <option value="udemy">Cupón</option>
               </select>
             </div>
 
