--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,6 +19,11 @@
               eventos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#" [routerLink]="['/udemy-coupons']" routerLinkActive="router-link-active">
+              Cupones udemy
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#" *ngIf="auth.isAuthenticated()" (click)="logout()">Logout</a>
           </li>
         </ul>
