Arreglada paginacion y cupones actualizados

--- a/src/app/components/content/courses/courses.component.html
+++ b/src/app/components/content/courses/courses.component.html
@@ -12,6 +12,13 @@
       </div>
     </div>
   </div>
+  <div class="m-auto">
+    <pagination-controls *ngIf="courses.length > itemsPerPage"
+      (pageChange)="page = $event" 
+      [previousLabel]="'Anterior'"
+      [nextLabel]="'Siguiente'">
+    </pagination-controls>
+  </div>
 </div>
 
 
