--- a/src/app/components/content/add-edit-event/add-edit-event.component.html
+++ b/src/app/components/content/add-edit-event/add-edit-event.component.html
@@ -3,13 +3,13 @@
 
     <div class="row">
       <div class="col-12 text-center">
-        <h1>Añadir evento</h1>
+        <h1>{{mode === MODE_EDIT ? 'Editar': 'Añadir'}} evento</h1>
       </div>
     </div>
 
     <div class="row">
       <div class="col-12">
-        <form (ngSubmit)="addEvent()">
+        <form (ngSubmit)="addEditEvent()">
 
           <div class="row form-group">
 
@@ -20,8 +20,15 @@
 
             <div class="col-md-4 col-12">
               <label for="start">Inicio</label>
-              <p-calendar name="start" id="start" inputStyleClass="form-control" [(ngModel)]="event.startDate"
-                showTime="true" [minDate]="today" [locale]="localeES">
+              <p-calendar 
+                name="start" 
+                id="start" 
+                dateFormat="dd/mm/yy" 
+                inputStyleClass="form-control" 
+                [(ngModel)]="event.startDate"
+                showTime="true" 
+                [minDate]="today" 
+                [locale]="localeES">
               </p-calendar>
 
               <p-checkbox name="show-end" binary="true" label="¿Tiene fin el evento?" [(ngModel)]="showEnd">
@@ -32,8 +39,14 @@
 
             <div class="col-md-4 col-12" *ngIf="showEnd">
               <label for="end">Fin</label>
-              <p-calendar name="end" id="end" inputStyleClass="form-control" [(ngModel)]="event.endDate" showTime="true"
-                [minDate]="event.startDate">
+              <p-calendar 
+                name="end" 
+                id="end" dateFormat="dd/mm/yy" 
+                inputStyleClass="form-control" 
+                [(ngModel)]="event.endDate" 
+                showTime="true"
+                [minDate]="event.startDate"
+                [locale]="localeES">
               </p-calendar>
             </div>
 
@@ -53,8 +66,7 @@
 
             <div class="col-md-4 col-12">
               <label for="url">URL</label>
-              <input name="url" class="form-control" id="url"
-                [(ngModel)]="event.url"/>
+              <input name="url" class="form-control" id="url" [(ngModel)]="event.url" />
             </div>
 
             <div class="col-md-4 col-12">
@@ -65,12 +77,9 @@
 
           </div>
 
-
           <div class="row form-group">
             <div class="col-12">
-
-              <button type="button" type="submit" class="btn btn-primary btn-block">Añadir evento</button>
-
+              <button type="button" type="submit" class="btn btn-primary btn-block">{{mode === MODE_ADD ? 'Añadir': 'Editar'}} evento</button>
             </div>
           </div>
 
