--- a/src/app/components/content/events/events.component.css
+++ b/src/app/components/content/events/events.component.css
@@ -2,21 +2,21 @@ div.fc div.fc-view-container div.fc-view div.fc-scroller{
     height: 100% !important;
 }
 
-.fc-list-item.blog span.fc-event-dot{
+.fc-list-item.blog span.fc-event-dot, .legend-blog{
     background-color: #7c7c7c;
 }
 
 
-.fc-list-item.video span.fc-event-dot{
+.fc-list-item.video span.fc-event-dot, .legend-video{
     background-color: #c4302b;
 }
 
 
-.fc-list-item.streaming span.fc-event-dot{
+.fc-list-item.streaming span.fc-event-dot, .legend-streaming{
     background-color: #6441a5;
 }
 
-.fc-list-item.udemy span.fc-event-dot{
+.fc-list-item.udemy span.fc-event-dot, .legend-udemy{
     background-color: #ea5252;
 }
 
