--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,13 +15,8 @@
             <a class="nav-link " [routerLink]="['/events']" routerLinkActive="router-link-active" href="#">Eventos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" [routerLink]="['/add-event']" routerLinkActive="router-link-active">Añadir
+            <a class="nav-link" href="#" [routerLink]="['/manage-events']" routerLinkActive="router-link-active">Gestionar
               eventos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" [routerLink]="['/udemy-coupons']" routerLinkActive="router-link-active">
-              Cupones udemy
-            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" *ngIf="auth.isAuthenticated()" (click)="logout()">Logout</a>
