--- a/src/app/components/content/events/events.component.html
+++ b/src/app/components/content/events/events.component.html
@@ -15,7 +15,7 @@
         <span class="badge badge-pill legend-udemy text-light mr-2">Cupones</span>
       </a>
     </div>
-    <p-fullCalendar [events]="events" [options]="optionsMonth"></p-fullCalendar>
+    <p-fullCalendar #calendar [events]="events" [options]="optionsMonth"></p-fullCalendar>
   </div>
   <div class="col-md-3 col-12">
     <p-fullCalendar [events]="events" [options]="optionsList"></p-fullCalendar>
