--- a/src/app/components/content/manage-events/manage-events.component.html
+++ b/src/app/components/content/manage-events/manage-events.component.html
@@ -3,9 +3,12 @@
 
     <div class="row">
       <div class="col-md-4 col-12">
-        <h1>Eventos</h1>
+        <h1>Eventos {{showEventsFuture ? 'futuros': 'pasados'}}</h1>
       </div>
-      <div class="offset-md-4 col-md-4 col-12">
+      <div class="col-md-4 col-12">
+        <button type="button" class="btn btn-primary btn-block" (click)="getEvents()">{{showEventsFuture ? 'Mostrar pasados' : 'Mostrar futuros'}}</button>
+      </div>
+      <div class="col-md-4 col-12">
         <button type="button" [routerLink]="['/add-event']" routerLinkActive="router-link-active" class="btn btn-primary btn-block">Añadir evento</button>
       </div>
     </div>
@@ -42,7 +45,7 @@
         </ddr-block-list>
       </div>
     </div>
-  
+
   </div>
 </div>
 
