--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,12 @@ html body {
     background: #f5f5f5;
 }
 
-html body .ui-calendar {
+html body .p-calendar {
     display: block;
+}
+
+html body .p-calendar .p-inputtext{
+    width: 100%;
 }
 
 
@@ -30,4 +34,12 @@ body .tooltip-inner{
     box-shadow: 0 0 2px rgba(0,0,0,0.5);
     padding: 10px;
     text-align: center;
+}
+
+.fc .fc-toolbar .fc-button {
+    display: inline !important; 
+}
+
+.fc .fc-list-table td.fc-widget-content{
+    border: none !important;
 }
